2005-05-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Encapsulate the mkI protocol in its own C++ class.
	* src/Makefile.am: ditto.
	* src/devdescr.cc: ditto.
	* src/jtag.h: ditto.
	* src/jtag1.h: ditto.
	* src/jtagbp.cc: ditto.
	* src/jtaggeneric.cc: ditto.
	* src/jtagio.cc: ditto.
	* src/jtagmisc.cc: ditto.
	* src/jtagprog.cc: ditto.
	* src/jtagrun.cc: ditto.
	* src/jtagrw.cc: ditto.
	* src/main.cc: ditto.
	* src/remote.cc: ditto.

2005-04-20    <dgay@barnowl.research.intel-research.net>

	* configure.ac: Set version to 20050420.

	* src/jtagio.cc (doJtagCommand): newly connected targets tend to
	spam JTAG_R_INFO responses, which weren't handled by the debugger
	(sympton: 'Cannot synchronise' messages). These responses are used
	to provide a channel from the target program to the debugger, but
	this is currently unused by avarice (see the IDRD register for
	details).
	
	Fix: detect JTAG_R_INFO response in sendJtagCommand. When this 
	happens, send an 'S' (get sign on) command. If we don't do this, the
	JTAG_R_INFO response seems to be repeated indefinitely...

2004-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Set version to 2.3.20041206 for cvs tracking.

2004-12-06  David Gay  <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): resume execution on exit when not in server mode

2004-12-06  Theodore A. Roth  <troth@openavr.org>

	* Release version 2.3.

2004-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Set version to 2.3.
	* configure.ac: Add more lib checks which might be need for libbfd.

2004-11-25  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* doc/avarice.1: Add at90can128 to supported list.
	Marked as experimental.
	* src/jtag.h: Fix typo in comment describing jtag_device_desc_type.
	* src/jtagio.cc (deviceDefinitions): Add entry for at90can128.

2004-11-21  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.